firmware/lib/control-table/tests/ui/region_on_enum.stderr
error: Region can only be derived for structs
 --> tests/ui/region_on_enum.rs:3:1
  |
3 | / #[repr(C)]
4 | | #[derive(Region)]
5 | | #[ct_region(addr = 0, size = 4)]
6 | | enum NotAStruct {
7 | |     A,
8 | |     B,
9 | | }
  | |_^
